# aliyun-log-rust-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_CN.md
.github/workflows/: rust.yml
client/: Cargo.toml  README.md  README_CN.md
client/src/: client.rs  common.rs  compress.rs  config.rs  error.rs  lib.rs  macros.rs  request.rs  response.rs  tests.rs  utils.rs
client/src/client/: consumer_group.rs  get_cursor.rs  get_logs.rs  index.rs  list_shards.rs  logstore.rs  project.rs  pull_logs.rs  pull_logs_raw.rs  put_logs.rs  put_logs_raw.rs
client/src/client/consumer_group/: consumer_group_heartbeat.rs  create_consumer_group.rs  delete_consumer_group.rs  get_consumer_group_checkpoint.rs  list_consumer_groups.rs  update_consumer_group.rs  update_consumer_group_checkpoint.rs
client/src/client/index/: create_index.rs  delete_index.rs  get_index.rs  update_index.rs
client/src/client/logstore/: create_logstore.rs  delete_logstore.rs  get_logstore.rs  list_logstores.rs  update_logstore.rs
client/src/client/project/: create_project.rs  delete_project.rs  get_project.rs  list_projects.rs  update_project.rs
client/tests/: common.rs  consumer_group.rs  get_cursor.rs  get_logs.rs  index.rs  list_shards.rs  logstore.rs  project.rs  pull_logs.rs  pull_logs_raw.rs  put_logs.rs  put_logs_raw.rs
docs/: api.rst  api_cn.rst
producer/: Cargo.toml  README.md  README_CN.md
producer/benches/: mock_sink.rs
producer/src/: builder.rs  callback.rs  dispatcher.rs  error.rs  exporter.rs  lib.rs  memory_limiter.rs  model.rs  producer.rs  shared.rs  stats.rs
producer/tests/: real_backend.rs
producer/tests/support/: mod.rs
protobuf/: Cargo.toml  README.md  build.rs
protobuf/benches/: proto.rs
protobuf/src/: delegate.rs  error.rs  facade.rs  internal.rs  lib.rs  logs.proto
sign/: Cargo.toml  README.md
sign/src/: lib.rs  sign.rs
