[package]
name = "aliyun-log-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
aliyun-log-sdk-protobuf = { version = "0.1.0", path = "../protobuf"}
aliyun-log-sdk-sign = { version = "0.2.0", path = "../sign"}
thiserror = "2.0.11"
anyhow = "1.0.96"
lazy_static = "1.5.0"
regex = "1.11.1"
http = "1.2.0"
lz4 = "1.28.1"
reqwest = "0.12.12"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
url = "2.5.4"
getset = "0.1.4"
tokio = { version = "1.44.2" , features = ["rt", "time"], optional = true}
log = "0.4.26"
futures-executor = { version = "0.3.0", optional = true }
bytes = "1.10.1"

[lib]

[dev-dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.6"
envy = "0.4.2"
log = "0.4.26"
tokio = { version = "1.44.2", features = ["full"] }
tokio-test = "0.4.4"


[features]
default = ["tokio"]
naive-runtime = ["futures-executor"]
