[package]
name = "aliyun-log-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
aliyun-log-sdk-protobuf = { version = "0.1.0", path = "../protobuf"}
aliyun-log-sdk-sign = { version = "0.2.0", path = "../sign"}
thiserror = "2.0.12"
anyhow = "1.0.98"
lazy_static = "1.5.0"
regex = "1.11.1"
http = "1.3.1"
lz4 = "1.28.1"
reqwest = "0.12.15"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"
getset = "0.1.5"
tokio = { version = "1.44.2" , features = ["rt", "time"]}
log = "0.4.27"
futures-executor = { version = "0.3.31"}
bytes = "1.10.1"

[lib]

[dev-dependencies]
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.8"
envy = "0.4.2"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
tokio-test = "0.4.4"

