[package]
name = "aliyun-log-sdk-protobuf"
version = "0.1.0"
edition = "2021"
authors = ["Aliyun Log Service"]
description = "A crate to serialize log data for Aliyun Log Service."
license = "MIT"
keywords = ["aliyun", "sls", "protobuf", "alibabacloud"]
documentation = "https://docs.rs/aliyun-log-sdk-protobuf"
homepage = "https://github.com/aliyun/aliyun-log-rust-sdk/tree/protobuf"
repository = "https://github.com/aliyun/aliyun-log-rust-sdk/tree/protobuf"
autobenches = false

[dependencies]
getset = "0.1.5"
quick-protobuf = "0.8.1"
thiserror = "2.0.12"

[build-dependencies]
prost-build = "0.13.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
prost = "0.13.5"
prost-build = "0.13.5"
protoc-bin-vendored = "3.1.0"

[[bench]]
name = "proto"
harness = false
