[package]
name = "aliyun-log-sdk-sign"
version = "0.2.0"
edition = "2021"
authors = ["Aliyun Log Service"]
description = "A crate to calculate signature for HTTP request to Aliyun Log Service."
license = "MIT"
repository = "https://github.com/aliyun/aliyun-log-sdk-sign"
readme = "README.md"
keywords = ["aliyun", "sls", "signature", "alibabacloud"]
documentation = "https://docs.rs/aliyun-log-sdk-sign"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.39"
hmac-sha1 = "0.2.2"
http = "1.2.0"
log = "0.4.25"
md5 = "0.7.0"
string-builder = "0.2.0"
thiserror = "2.0.11"

[dev-dependencies]
env_logger = "0.11.6"
