[package]
name = "aliyun-log-sdk-sign"
version = "0.2.0"
edition = "2021"
authors = ["Aliyun Log Service"]
description = "A crate to calculate signature for HTTP request to Aliyun Log Service."
license = "MIT"
readme = "README.md"
keywords = ["aliyun", "sls", "signature", "alibabacloud"]
documentation = "https://docs.rs/aliyun-log-sdk-protobuf"
homepage = "https://github.com/aliyun/aliyun-log-rust-sdk/tree/sign"
repository = "https://github.com/aliyun/aliyun-log-rust-sdk/tree/sign"
autobenches = false

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.40"
hmac-sha1 = "0.2.2"
http = "1.3.1"
log = "0.4.27"
md5 = "0.7.0"
string-builder = "0.2.0"
thiserror = "2.0.12"

[dev-dependencies]
env_logger = "0.11.8"
